--- a/Movies.ipynb
+++ b/Movies.ipynb
@@ -6559,6 +6559,481 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 141,
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count()\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\r\n",
+    "                .rename({'userId':'count'}, axis=1)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "source": [
+    "rating_counts.head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   movieId               rating  count  timestamp\n",
+       "0        1                 0.50    441        441\n",
+       "1        1                 1.00    804        804\n",
+       "2        1                 1.50    438        438\n",
+       "3        1                 2.00   2083       2083\n",
+       "4        1                 2.50   1584       1584"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>count</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>441</td>\n",
+       "      <td>441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>804</td>\n",
+       "      <td>804</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>438</td>\n",
+       "      <td>438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>2083</td>\n",
+       "      <td>2083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>1584</td>\n",
+       "      <td>1584</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 146
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\r\n",
+    "                .rename({'userId':'count'}, axis=1) \\\r\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "source": [
+    "rating_counts.head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "rating                  0.50                 1.00                 1.50  \\\n",
+       "movieId                                                                  \n",
+       "1                     441.00               804.00               438.00   \n",
+       "2                     263.00               797.00               525.00   \n",
+       "3                     169.00               772.00               233.00   \n",
+       "4                      47.00               351.00                31.00   \n",
+       "5                     237.00               785.00               270.00   \n",
+       "\n",
+       "rating                  2.00                 2.50                 3.00  \\\n",
+       "movieId                                                                  \n",
+       "1                   2,083.00             1,584.00            11,577.00   \n",
+       "2                   2,479.00             1,810.00             8,510.00   \n",
+       "3                   1,665.00               616.00             6,213.00   \n",
+       "4                     496.00                77.00             1,133.00   \n",
+       "5                   1,716.00               664.00             6,608.00   \n",
+       "\n",
+       "rating                  3.50                 4.00                 4.50  \\\n",
+       "movieId                                                                  \n",
+       "1                   5,741.00            22,020.00             5,325.00   \n",
+       "2                   2,916.00             6,035.00               690.00   \n",
+       "3                     759.00             3,433.00               154.00   \n",
+       "4                      66.00               557.00                12.00   \n",
+       "5                     723.00             2,959.00               166.00   \n",
+       "\n",
+       "rating                  5.00  \n",
+       "movieId                       \n",
+       "1                  15,995.00  \n",
+       "2                   2,035.00  \n",
+       "3                   1,483.00  \n",
+       "4                     211.00  \n",
+       "5                   1,130.00  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>rating</th>\n",
+       "      <th>0.50</th>\n",
+       "      <th>1.00</th>\n",
+       "      <th>1.50</th>\n",
+       "      <th>2.00</th>\n",
+       "      <th>2.50</th>\n",
+       "      <th>3.00</th>\n",
+       "      <th>3.50</th>\n",
+       "      <th>4.00</th>\n",
+       "      <th>4.50</th>\n",
+       "      <th>5.00</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>movieId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>441.00</td>\n",
+       "      <td>804.00</td>\n",
+       "      <td>438.00</td>\n",
+       "      <td>2,083.00</td>\n",
+       "      <td>1,584.00</td>\n",
+       "      <td>11,577.00</td>\n",
+       "      <td>5,741.00</td>\n",
+       "      <td>22,020.00</td>\n",
+       "      <td>5,325.00</td>\n",
+       "      <td>15,995.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>263.00</td>\n",
+       "      <td>797.00</td>\n",
+       "      <td>525.00</td>\n",
+       "      <td>2,479.00</td>\n",
+       "      <td>1,810.00</td>\n",
+       "      <td>8,510.00</td>\n",
+       "      <td>2,916.00</td>\n",
+       "      <td>6,035.00</td>\n",
+       "      <td>690.00</td>\n",
+       "      <td>2,035.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>169.00</td>\n",
+       "      <td>772.00</td>\n",
+       "      <td>233.00</td>\n",
+       "      <td>1,665.00</td>\n",
+       "      <td>616.00</td>\n",
+       "      <td>6,213.00</td>\n",
+       "      <td>759.00</td>\n",
+       "      <td>3,433.00</td>\n",
+       "      <td>154.00</td>\n",
+       "      <td>1,483.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>47.00</td>\n",
+       "      <td>351.00</td>\n",
+       "      <td>31.00</td>\n",
+       "      <td>496.00</td>\n",
+       "      <td>77.00</td>\n",
+       "      <td>1,133.00</td>\n",
+       "      <td>66.00</td>\n",
+       "      <td>557.00</td>\n",
+       "      <td>12.00</td>\n",
+       "      <td>211.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>237.00</td>\n",
+       "      <td>785.00</td>\n",
+       "      <td>270.00</td>\n",
+       "      <td>1,716.00</td>\n",
+       "      <td>664.00</td>\n",
+       "      <td>6,608.00</td>\n",
+       "      <td>723.00</td>\n",
+       "      <td>2,959.00</td>\n",
+       "      <td>166.00</td>\n",
+       "      <td>1,130.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 148
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "source": [
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "source": [
+    "rating_counts.head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                  rating_0.5           rating_1.0           rating_1.5  \\\n",
+       "movieId                                                                  \n",
+       "1                     441.00               804.00               438.00   \n",
+       "2                     263.00               797.00               525.00   \n",
+       "3                     169.00               772.00               233.00   \n",
+       "4                      47.00               351.00                31.00   \n",
+       "5                     237.00               785.00               270.00   \n",
+       "\n",
+       "                  rating_2.0           rating_2.5           rating_3.0  \\\n",
+       "movieId                                                                  \n",
+       "1                   2,083.00             1,584.00            11,577.00   \n",
+       "2                   2,479.00             1,810.00             8,510.00   \n",
+       "3                   1,665.00               616.00             6,213.00   \n",
+       "4                     496.00                77.00             1,133.00   \n",
+       "5                   1,716.00               664.00             6,608.00   \n",
+       "\n",
+       "                  rating_3.5           rating_4.0           rating_4.5  \\\n",
+       "movieId                                                                  \n",
+       "1                   5,741.00            22,020.00             5,325.00   \n",
+       "2                   2,916.00             6,035.00               690.00   \n",
+       "3                     759.00             3,433.00               154.00   \n",
+       "4                      66.00               557.00                12.00   \n",
+       "5                     723.00             2,959.00               166.00   \n",
+       "\n",
+       "                  rating_5.0  \n",
+       "movieId                       \n",
+       "1                  15,995.00  \n",
+       "2                   2,035.00  \n",
+       "3                   1,483.00  \n",
+       "4                     211.00  \n",
+       "5                   1,130.00  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rating_0.5</th>\n",
+       "      <th>rating_1.0</th>\n",
+       "      <th>rating_1.5</th>\n",
+       "      <th>rating_2.0</th>\n",
+       "      <th>rating_2.5</th>\n",
+       "      <th>rating_3.0</th>\n",
+       "      <th>rating_3.5</th>\n",
+       "      <th>rating_4.0</th>\n",
+       "      <th>rating_4.5</th>\n",
+       "      <th>rating_5.0</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>movieId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>441.00</td>\n",
+       "      <td>804.00</td>\n",
+       "      <td>438.00</td>\n",
+       "      <td>2,083.00</td>\n",
+       "      <td>1,584.00</td>\n",
+       "      <td>11,577.00</td>\n",
+       "      <td>5,741.00</td>\n",
+       "      <td>22,020.00</td>\n",
+       "      <td>5,325.00</td>\n",
+       "      <td>15,995.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>263.00</td>\n",
+       "      <td>797.00</td>\n",
+       "      <td>525.00</td>\n",
+       "      <td>2,479.00</td>\n",
+       "      <td>1,810.00</td>\n",
+       "      <td>8,510.00</td>\n",
+       "      <td>2,916.00</td>\n",
+       "      <td>6,035.00</td>\n",
+       "      <td>690.00</td>\n",
+       "      <td>2,035.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>169.00</td>\n",
+       "      <td>772.00</td>\n",
+       "      <td>233.00</td>\n",
+       "      <td>1,665.00</td>\n",
+       "      <td>616.00</td>\n",
+       "      <td>6,213.00</td>\n",
+       "      <td>759.00</td>\n",
+       "      <td>3,433.00</td>\n",
+       "      <td>154.00</td>\n",
+       "      <td>1,483.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>47.00</td>\n",
+       "      <td>351.00</td>\n",
+       "      <td>31.00</td>\n",
+       "      <td>496.00</td>\n",
+       "      <td>77.00</td>\n",
+       "      <td>1,133.00</td>\n",
+       "      <td>66.00</td>\n",
+       "      <td>557.00</td>\n",
+       "      <td>12.00</td>\n",
+       "      <td>211.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>237.00</td>\n",
+       "      <td>785.00</td>\n",
+       "      <td>270.00</td>\n",
+       "      <td>1,716.00</td>\n",
+       "      <td>664.00</td>\n",
+       "      <td>6,608.00</td>\n",
+       "      <td>723.00</td>\n",
+       "      <td>2,959.00</td>\n",
+       "      <td>166.00</td>\n",
+       "      <td>1,130.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 150
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "source": [
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "source": [
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
